--- a/src/components/Options/Options.module.css
+++ b/src/components/Options/Options.module.css
@@ -1,16 +1,55 @@
-.btn_container {
+.list {
   display: flex;
-  justify-content: center;
-  gap: 10px;
+  gap: 15px;
+  margin-bottom: 25px;
 }
-.btn {
-  background-color: rgb(241, 221, 204);
-  box-shadow: 0 0 3px 1px #2a2a2b;
-  transition: background-color 0.25s ease, color 0.25s ease,
-    box-shadow 0.25s ease;
+
+.btnGood {
+  padding: 10px;
+  background-color: transparent;
+  border: 2px solid rgb(6, 84, 6);
+  border-radius: 10%;
+  width: 65px;
 }
-.btn:hover,
-.btn:focus {
-  background-color: #f5e2a3;
-  box-shadow: inset 0 0 3px 1px #2a2a2b;
+
+.btnGood:hover {
+  background-color: rgb(76, 192, 76);
+}
+
+.btnNeutral {
+  padding: 10px;
+  background-color: transparent;
+  border: 2px solid rgb(216, 177, 23);
+  border-radius: 10%;
+  width: 80px;
+}
+
+.btnNeutral:hover {
+  background-color: rgb(230, 236, 74);
+}
+
+.btnBad {
+  padding: 10px;
+  background-color: transparent;
+  border: 2px solid rgb(133, 10, 10);
+  border-radius: 10%;
+  width: 65px;
+
+  transition: ease-in-out;
+}
+
+.btnBad:hover {
+  background-color: rgb(211, 37, 34);
+}
+
+.btnReset {
+  padding: 10px;
+  background-color: transparent;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 10%;
+  width: 65px;
+}
+
+.btnReset:hover {
+  background-color: #3a3a3a;
 }
