--- a/src/components/Description/Description.module.css
+++ b/src/components/Description/Description.module.css
@@ -1,7 +1,8 @@
-.title {
-  font-size: 40px;
+.description {
+  text-align: center;
+  margin-bottom: 25px;
 }
-.text {
-  max-width: 400px;
-  font-size: 20px;
+
+.title {
+  margin-bottom: 20px;
 }
